--- a/style.css
+++ b/style.css
@@ -1,6 +1,9 @@
 body{
     margin: 0;
     padding: 0;
+    font-family: 'Poppins', sans-serif;
+    font-family: 'Roboto Slab', serif;
+    font-family: 'Work Sans', sans-serif;
 }
 .max-img{
     max-width: 70%;
@@ -99,6 +102,8 @@ span{
     background-repeat: no-repeat;
     margin-top: 20px;
 }
+
+
 /* close threed section */
 .forth-section{
     display: flex;
