--- a/style.css
+++ b/style.css
@@ -181,7 +181,7 @@ footer{
     padding: 10px;
     margin: 5px;
 }
-.image img{
+.half img{
     width: 70%;
     size: 100px;
     margin-left: 40px;
